--- a/qlthucung/Views/DichVu/Index.cshtml
+++ b/qlthucung/Views/DichVu/Index.cshtml
@@ -143,7 +143,7 @@
             <div style="background-image: url('../../Content/images/bg_7.jpg'); border: 2px solid rgb(183 214 247); box-shadow: 0 0 25px rgb(183 214 247), inset 0 0 10px rgb(183 214 247);" class="service-banner pt-1">
                 <div class="boxservice" style=" display: block; text-align: center; padding-block: 30px; margin-block: inherit;">
                     <h3 class="h1-title" style=" font-size: x-large;">
-                        PetStore CHĂM SÓC TOÀN DIỆN, “THIÊN ĐƯỜNG" CỦA THÚ CƯNG!
+                        Petshop CHĂM SÓC TOÀN DIỆN, “THIÊN ĐƯỜNG" CỦA THÚ CƯNG!
                     </h3>
                     <p>Với mong muốn được trở thành ngôi nhà thứ hai của thú cưng, Petstore mang đến những dịch vụ lẫn sản phẩm cần thiết nhất mà mọi người bạn dễ thương này.</p>
 
