--- a/qlthucung/Views/DichVu/Index.cshtml
+++ b/qlthucung/Views/DichVu/Index.cshtml
@@ -159,7 +159,7 @@
             <div class="row" style="padding: 15px!important;">
                 <div class="service-list__content-box col-md-6 text-center">
                     <h3 class="h1-title" style=" font-size: x-large;">
-                        1. PET STORE - NƠI CHĂM SÓC THÚ CƯNG CHẤT LƯỢNG!
+                        1. PETSHOP - NƠI CHĂM SÓC THÚ CƯNG CHẤT LƯỢNG!
                     </h3>
                     <p>
                         Những chuyến du lịch hay công tác dài ngày khiến bạn cảm thấy lo lắng khi phải gửi gắm bé yêu cho ai đó chăm nom hộ?
