fix: Index-DichVu

--- a/qlthucung/Views/DichVu/Index.cshtml
+++ b/qlthucung/Views/DichVu/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="post-wrapper">
         <div class="post text-center ml-1">
             <h1 style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); white-space: nowrap;" class="text-white mb-5">
-                Dịch vụ chăm súc thú cưng tại PetStore
+                Dịch vụ chăm súc thú cưng tại Petshop
                 <div class="row mt-5" style="margin-left: -4rem;">
                     <div class="col-lg-4 col-md-4">
                         <div class="mainServices">
@@ -143,7 +143,7 @@
             <div style="background-image: url('../../Content/images/bg_7.jpg'); border: 2px solid rgb(183 214 247); box-shadow: 0 0 25px rgb(183 214 247), inset 0 0 10px rgb(183 214 247);" class="service-banner pt-1">
                 <div class="boxservice" style=" display: block; text-align: center; padding-block: 30px; margin-block: inherit;">
                     <h3 class="h1-title" style=" font-size: x-large;">
-                        Petshop CHĂM SÓC TOÀN DIỆN, “THIÊN ĐƯỜNG" CỦA THÚ CƯNG!
+                        PETSHOP CHĂM SÓC TOÀN DIỆN, “THIÊN ĐƯỜNG" CỦA THÚ CƯNG!
                     </h3>
                     <p>Với mong muốn được trở thành ngôi nhà thứ hai của thú cưng, Petstore mang đến những dịch vụ lẫn sản phẩm cần thiết nhất mà mọi người bạn dễ thương này.</p>
 
@@ -172,10 +172,10 @@
                 <img src="~/Content/images/svmeo2.jpg" alt="#" class="col-md-6 text-center">
                 <div class="service-list__content-box col-md-6 text-center">
                     <h3 class="h1-title" style=" font-size: x-large;">
-                        2. PET STORE - NƠI CUNG CẤP THỨC ĂN, CÁT VỆ SINH,... CHẤT LƯỢNG NHẤT!
+                        2. PETSHOP - NƠI CUNG CẤP THỨC ĂN, CÁT VỆ SINH,... CHẤT LƯỢNG NHẤT!
                     </h3>
                     <p>
-                        Tại Pet Store, chúng tôi cung cấp mọi nhu cầu mà thú cưng cần với giá cả hợp lý và chất lượng hàng đầu!
+                        Tại Petshop, chúng tôi cung cấp mọi nhu cầu mà thú cưng cần với giá cả hợp lý và chất lượng hàng đầu!
                     <br/>
                         Đa dạng món ăn hấp dẫn từ các nhãn hiệu lớn trong và ngoài nước, mùi vị hấp dẫn.
                     </p>
