fix: SanPham (Index, Details) fix: DichVu

--- a/qlthucung/Views/DichVu/Index.cshtml
+++ b/qlthucung/Views/DichVu/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="post-slider">
     <div class="post-wrapper">
         <div class="post text-center ml-1">
-            <h1 style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); white-space: nowrap;" class="text-white mb-5">
+            <h1 style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center;" class="text-white mb-5">
                 Dịch vụ chăm súc thú cưng tại Petshop
                 <div class="row mt-5" style="margin-left: -4rem;">
                     <div class="col-lg-4 col-md-4">
@@ -140,7 +140,7 @@
     </div>
     <div class="body">
         <div class="container-fluid" style="padding: 0!important;">
-            <div style="background-image: url('../../Content/images/bg_7.jpg'); border: 2px solid rgb(183 214 247); box-shadow: 0 0 25px rgb(183 214 247), inset 0 0 10px rgb(183 214 247);" class="service-banner pt-1">
+            <div style="background-image: url('../../Content/images/bg_7.jpg'); background-size: revert-layer; border: 2px solid rgb(183 214 247); box-shadow: 0 0 25px rgb(183 214 247), inset 0 0 10px rgb(183 214 247);" class="service-banner pt-1">
                 <div class="boxservice" style=" display: block; text-align: center; padding-block: 30px; margin-block: inherit;">
                     <h3 class="h1-title" style=" font-size: x-large;">
                         PETSHOP CHĂM SÓC TOÀN DIỆN, “THIÊN ĐƯỜNG" CỦA THÚ CƯNG!
