--- a/qlthucung/Views/SanPham/Index.cshtml
+++ b/qlthucung/Views/SanPham/Index.cshtml
@@ -24,21 +24,21 @@
 </div>
 
 <!-- Sản phẩm nổi bật -->
-<div class="body">
+<div class="body pt-5 pb-4">
 
     <div class="body__mainTitle">
-        <h2>Sản phẩm nổi bật</h2>
+        <h2 class="mb-0 pb-0 pt-5">Sản phẩm nổi bật</h2>
     </div>
 
     <div class="post-slider2">
         <i class="fa fa-chevron-left prev2" aria-hidden="true"></i>
         <i class="fa fa-chevron-right next2" aria-hidden="true"></i>
 
-        <div class="row">
-            <div class="post-wrapper2">
+        <div class="row mt-0 pt-0">
+            <div class="post-wrapper2 mt-0 pt-0">
                 @foreach (var item in ViewBag.getSPNoiBat)
                 {
-                    <div class="col-lg-2_5 col-md-4 col-6 post2">
+                    <div class="col-md-4 col-6 post2">
                         <a asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Masp">
                             <div class="product">
                                 <div class="product__img">
@@ -98,7 +98,7 @@
     </div>
 </div>
 
-<div class="banner">
+<div class="banner pt-5 pb-4">
     <div class="body__mainTitle">
         <h2>Dịch vụ của chúng tôi</h2>
     </div>
@@ -132,7 +132,7 @@
 </div>
 
 <!-- Tất cả sản phẩm -->
-<div class="body">
+<div class="body pt-5 pb-4">
     <div class="body__mainTitle" style="display: flex; justify-content: space-between;">
         <h2>TẤT CẢ SẢN PHẨM</h2>
     </div>
@@ -206,14 +206,12 @@
 
 </div>
 <!-- End Tất cả sản phẩm -->
-
 <!-- Sản phẩm cho chó -->
-<div class="body">
+<div class="body pt-5 pb-4">
 
-    <div class="body__mainTitle d-flex align-items-center">
-        <h2>Sản phẩm dành cho chó</h2>
-
-        <div class="d-flex justify-content-center align-items-center ml-5" style="font-size: 26px;">
+    <div class="row body__mainTitle d-flex align-items-center">
+        <h2 class="col-md-6 text-left">Sản phẩm dành cho chó</h2>
+        <div class="col-md-6 d-flex justify-content-end align-items-center text-right" style="font-size: 26px;">
             <div id="fordog" class="text-secondary activeColor mr-3">Đồ ăn</div>
             <div id="fordog2" class="text-secondary mr-3">Phụ kiện</div>
             <div id="fordog3" class="text-secondary">Vật dụng</div>
@@ -281,7 +279,7 @@
         </div>
     </div>
 
-    <div class="dogstyle">
+    <div class="dogstyle pt-5 pb-4">
         <div class="row">
             @foreach (var item in ViewBag.getSPChoCho4)
             {
@@ -342,7 +340,7 @@
         </div>
     </div>
 
-    <div class="dogequi">
+    <div class="dogequi pt-5 pb-4">
         <div class="row">
             @foreach (var item in ViewBag.getSPChoCho5)
             {
@@ -404,22 +402,22 @@
     </div>
 </div>
 
-<div class="banner">
+<div class="banner pt-5 pb-4">
     <div class="banner-top">
         <img src="~/Content/images/BG-2.jpg" />
     </div>
 </div>
 
 <!-- Sản phẩm cho mèo -->
-<div class="body">
+<div class="body pt-5 pb-4">
 
-    <div class="body__mainTitle d-flex align-items-center">
-        <h2>Sản phẩm dành cho mèo</h2>
-            <div class="d-flex justify-content-center align-items-center ml-5" style="font-size: 26px;">
-                <div id="forcat" class="text-secondary activeColor mr-3">Đồ ăn</div>
-                <div id="forcat2" class="text-secondary mr-3">Phụ kiện</div>
-                <div id="forcat3" class="text-secondary">Vật dụng</div>
-            </div>
+    <div class="row body__mainTitle d-flex align-items-center">
+        <h2 class="col-md-6 text-left">Sản phẩm dành cho mèo</h2>
+        <div class="col-md-6 d-flex justify-content-end align-items-center text-right" style="font-size: 26px;">
+            <div id="forcat" class="text-secondary activeColor mr-3">Đồ ăn</div>
+            <div id="forcat2" class="text-secondary mr-3">Phụ kiện</div>
+            <div id="forcat3" class="text-secondary">Vật dụng</div>
+        </div>
     </div>
 
     <div class="catfood active">
@@ -603,7 +601,7 @@
     </div>
 </div>
 
-<div class="banner">
+<div class="banner pt-5 pb-4">
 
     <div class="row banner-top">
         <img class="col-md-4 col-sm-6" src="~/Content/images/bg1.jpg" />
