--- a/qlthucung/Views/Shared/_Layout.cshtml
+++ b/qlthucung/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PetStore</title>
+    <title>PETSHOP</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -47,7 +47,7 @@
                         <li class="nav-item"><a class="nav-link" href="#Thongtin">Thông tin</a></li>
                         <li class="nav-item"><a class="nav-link" href="#Lienhe">Liên hệ</a></li>
                         <li style="display: flex; align-items: center;">
-                            <div class="login mr-2 ml-3" id="loginClick">
+                            <div class="login pr-3 pl-2" id="loginClick">
                                 @if (User.Identity.IsAuthenticated)
                                 {
                                     <span>
@@ -79,33 +79,33 @@
                                     </div>
                                 }
                             </div>
+                            <div class="login pr-2 pl-3">
+                                <a class="navbar__shoppingCart getstarted scrollto active" asp-controller="cart" asp-action="Index" style="font-weight:bold;text-decoration:none;display: inline-flex;align-items: center;position:relative;">
 
-                            <a class="navbar__shoppingCart getstarted scrollto active" asp-controller="cart" asp-action="Index" style="font-weight:bold;text-decoration:none;display: inline-flex;align-items: center;position:relative;">
+                                    <svg width="24px" viewBox="0 0 24.00 24.00" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)" stroke-width="0.672">
+                                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.048"></g>
+                                        <g id="SVGRepo_iconCarrier">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M2 1C1.44772 1 1 1.44772 1 2C1 2.55228 1.44772 3 2 3H3.21922L6.78345 17.2569C5.73276 17.7236 5 18.7762 5 20C5 21.6569 6.34315 23 8 23C9.65685 23 11 21.6569 11 20C11 19.6494 10.9398 19.3128 10.8293 19H15.1707C15.0602 19.3128 15 19.6494 15 20C15 21.6569 16.3431 23 18 23C19.6569 23 21 21.6569 21 20C21 18.3431 19.6569 17 18 17H8.78078L8.28078 15H18C20.0642 15 21.3019 13.6959 21.9887 12.2559C22.6599 10.8487 22.8935 9.16692 22.975 7.94368C23.0884 6.24014 21.6803 5 20.1211 5H5.78078L5.15951 2.51493C4.93692 1.62459 4.13696 1 3.21922 1H2ZM18 13H7.78078L6.28078 7H20.1211C20.6742 7 21.0063 7.40675 20.9794 7.81078C20.9034 8.9522 20.6906 10.3318 20.1836 11.3949C19.6922 12.4251 19.0201 13 18 13ZM18 20.9938C17.4511 20.9938 17.0062 20.5489 17.0062 20C17.0062 19.4511 17.4511 19.0062 18 19.0062C18.5489 19.0062 18.9938 19.4511 18.9938 20C18.9938 20.5489 18.5489 20.9938 18 20.9938ZM7.00617 20C7.00617 20.5489 7.45112 20.9938 8 20.9938C8.54888 20.9938 8.99383 20.5489 8.99383 20C8.99383 19.4511 8.54888 19.0062 8 19.0062C7.45112 19.0062 7.00617 19.4511 7.00617 20Z" fill="#FFFFFF"></path>
+                                        </g>
+                                    </svg>
+                                    @using Microsoft.AspNetCore.Http
 
-                                <svg width="24px" viewBox="0 0 24.00 24.00" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)" stroke-width="0.672">
-                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.048"></g>
-                                    <g id="SVGRepo_iconCarrier">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2 1C1.44772 1 1 1.44772 1 2C1 2.55228 1.44772 3 2 3H3.21922L6.78345 17.2569C5.73276 17.7236 5 18.7762 5 20C5 21.6569 6.34315 23 8 23C9.65685 23 11 21.6569 11 20C11 19.6494 10.9398 19.3128 10.8293 19H15.1707C15.0602 19.3128 15 19.6494 15 20C15 21.6569 16.3431 23 18 23C19.6569 23 21 21.6569 21 20C21 18.3431 19.6569 17 18 17H8.78078L8.28078 15H18C20.0642 15 21.3019 13.6959 21.9887 12.2559C22.6599 10.8487 22.8935 9.16692 22.975 7.94368C23.0884 6.24014 21.6803 5 20.1211 5H5.78078L5.15951 2.51493C4.93692 1.62459 4.13696 1 3.21922 1H2ZM18 13H7.78078L6.28078 7H20.1211C20.6742 7 21.0063 7.40675 20.9794 7.81078C20.9034 8.9522 20.6906 10.3318 20.1836 11.3949C19.6922 12.4251 19.0201 13 18 13ZM18 20.9938C17.4511 20.9938 17.0062 20.5489 17.0062 20C17.0062 19.4511 17.4511 19.0062 18 19.0062C18.5489 19.0062 18.9938 19.4511 18.9938 20C18.9938 20.5489 18.5489 20.9938 18 20.9938ZM7.00617 20C7.00617 20.5489 7.45112 20.9938 8 20.9938C8.54888 20.9938 8.99383 20.5489 8.99383 20C8.99383 19.4511 8.54888 19.0062 8 19.0062C7.45112 19.0062 7.00617 19.4511 7.00617 20Z" fill="#FFFFFF"></path>
-                                    </g>
-                                </svg>
-                                @using Microsoft.AspNetCore.Http
+                                    @{
+                                        HttpContext httpContext = ViewContext.HttpContext;
+                                        string name = httpContext.Session.GetString("countCart");
+                                    }
 
-                                @{
-                                    HttpContext httpContext = ViewContext.HttpContext;
-                                    string name = httpContext.Session.GetString("countCart");
-                                }
-
-                                @if (String.IsNullOrEmpty(name))
-                                {
-                                    <span style="color: black; position: absolute; left: 20px; top:5px; border: 0.25px solid white; border-radius: 100%; padding-inline: 5px; background-color: white;">0</span>
-                                }
-                                else
-                                {
-                                    <span>@name</span>
-                                }
-
-                            </a>
+                                    @if (String.IsNullOrEmpty(name))
+                                    {
+                                        <span style="color: black; position: absolute; left: 20px; top:5px; border: 0.25px solid white; border-radius: 100%; padding-inline: 5px; background-color: white;">0</span>
+                                    }
+                                    else
+                                    {
+                                        <span>@name</span>
+                                    }
+                                </a>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -258,13 +258,12 @@
         </div>
         <!-- Copyright -->
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     <!-- SB Forms JS-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/Content/scripts/script.js" asp-append-version="true"></script>
