--- a/qlthucung/wwwroot/Content/cssSecurity/style.css
+++ b/qlthucung/wwwroot/Content/cssSecurity/style.css
@@ -11465,7 +11465,7 @@ h1, h2, h3, h4, h5,
 
 .login-wrap {
 	position: relative;
-	background-color: transparent;
+	background-color: floralwhite;
 	border-radius: 5px;
 	padding-left: 30px;
 	padding-right: 30px;
