--- a/qlthucung/wwwroot/Content/cssSecurity/style1.css
+++ b/qlthucung/wwwroot/Content/cssSecurity/style1.css
@@ -1,6 +1,6 @@
 body {
     margin: auto;
-    background: linear-gradient(140deg, #ffc8b42e, transparent), linear-gradient(0, #ffc8b42e, transparent);
+    background: #292525e3;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
