--- a/qlthucung/Views/SanPham/Details.cshtml
+++ b/qlthucung/Views/SanPham/Details.cshtml
@@ -83,12 +83,12 @@
                 }
                 else
                 {
-                    @*<div class="product__cart">
+                    <div class="product__cart">
                 <a asp-controller="cart" asp-action="addtocart" asp-route-id="@Model.Masp" class="product__cart-add" name="add-to-cart" onclick="alert('Thêm vào giỏ hàng thành công!')">
                 Thêm vào giỏ hàng
                 </a>
                 <a asp-controller="cart" asp-action="buy" asp-route-id="@Model.Masp" class="product__cart-buy" name="buy-now">Mua ngay</a>
-                </div>*@
+                </div>
 
                     <div class="number d-flex">
                         <div>Số lượng: </div>
