--- a/qlthucung/Views/Shared/_Layout.cshtml
+++ b/qlthucung/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
 
     @RenderBody()
 
-    <footer class="text-center bg-dark text-muted">
+    <footer class="text-center bg-dark text-muted" id="Thongtin">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between borderhead">
             <!-- Left -->
