--- a/qlthucung/Views/Home/Index.cshtml
+++ b/qlthucung/Views/Home/Index.cshtml
@@ -189,7 +189,7 @@
 </section>
 
 <!-- Contact-->
-<section class="contact-section bg-black w-100">
+<section class="contact-section bg-black w-100" id="Lienhe">
     <div class="container">
         <div class="row gx-4 gx-lg-5 d-flex">
             <div class="col-md-4 mb-md-0">
